--- a/cancion.html
+++ b/cancion.html
@@ -14,36 +14,75 @@
 </head>
 
 <body class="text-gray-800 bg-music-gradient">
-  <header class="shadow-sm header-surface">
-    <div class="flex items-center justify-between max-w-4xl p-4 mx-auto panel-surface">
-      <div class="flex items-center gap-3">
-        <img src="./src/img/logo.svg" alt="Logo" class="w-10 h-10" />
-        <h1 class="text-xl">MUSITC</h1>
+  <header class="relative overflow-hidden shadow-sm header-surface">
+    <!-- Barras laterales izquierda - EXTRA GRANDES -->
+    <div class="absolute top-0 left-0 flex flex-col justify-center w-20 h-full gap-1 opacity-35" aria-hidden="true">
+      <div class="w-full bg-blue-500 rounded-r-lg animate-pulse" style="height: 25%; animation-duration: 0.8s;"></div>
+      <div class="w-full bg-purple-500 rounded-r-lg animate-pulse"
+        style="height: 40%; animation-duration: 1.2s; animation-delay: 0.2s;"></div>
+      <div class="w-full bg-pink-500 rounded-r-lg animate-pulse"
+        style="height: 60%; animation-duration: 0.9s; animation-delay: 0.4s;"></div>
+      <div class="w-full bg-blue-400 rounded-r-lg animate-pulse"
+        style="height: 35%; animation-duration: 1.1s; animation-delay: 0.6s;"></div>
+      <div class="w-full bg-purple-400 rounded-r-lg animate-pulse"
+        style="height: 30%; animation-duration: 1.0s; animation-delay: 0.8s;"></div>
+      <div class="w-full bg-pink-400 rounded-r-lg animate-pulse"
+        style="height: 50%; animation-duration: 0.7s; animation-delay: 1s;"></div>
+    </div>
+
+    <!-- Barras laterales derecha - EXTRA GRANDES -->
+    <div class="absolute top-0 right-0 flex flex-col justify-center w-20 h-full gap-1 opacity-35" aria-hidden="true">
+      <div class="w-full bg-pink-500 rounded-l-lg animate-pulse" style="height: 55%; animation-duration: 1.0s;"></div>
+      <div class="w-full bg-blue-500 rounded-l-lg animate-pulse"
+        style="height: 30%; animation-duration: 0.7s; animation-delay: 0.3s;"></div>
+      <div class="w-full bg-purple-500 rounded-l-lg animate-pulse"
+        style="height: 65%; animation-duration: 1.3s; animation-delay: 0.5s;"></div>
+      <div class="w-full bg-pink-400 rounded-l-lg animate-pulse"
+        style="height: 25%; animation-duration: 0.9s; animation-delay: 0.7s;"></div>
+      <div class="w-full bg-blue-400 rounded-l-lg animate-pulse"
+        style="height: 45%; animation-duration: 1.1s; animation-delay: 0.9s;"></div>
+      <div class="w-full bg-purple-400 rounded-l-lg animate-pulse"
+        style="height: 40%; animation-duration: 0.8s; animation-delay: 1.1s;"></div>
+    </div>
+
+    <div class="relative z-10 flex items-center justify-between max-w-4xl p-4 mx-auto panel-surface">
+      <!-- Logo / nombre del blog -->
+      <div class="flex items-center flex-shrink-0 gap-3">
+        <div class="w-2 h-8 rounded-full sm:h-10 bg-gradient-to-b from-blue-500 to-purple-600"></div>
+        <h1 class="text-xl font-bold text-gray-800 sm:text-2xl">MUSITC</h1>
       </div>
-      <nav>
-        <ul class="flex gap-4 text-sm">
-          <li><a class="text-gray-600 hover:underline" href="./index.html">Inicio</a></li>
-          <li><a class="text-blue-600" aria-current="page" href="./cancion.html">Canciones</a></li>
-          <li><a class="text-gray-600 hover:underline" href="./acerca.html">Acerca</a></li>
-          <li><a class="text-gray-600 hover:underline" href="./contacto.html">Comunidad</a></li>
+
+      <!-- Navegación simple -->
+      <nav class="flex-shrink-0">
+        <ul class="flex gap-2 text-xs sm:gap-4 sm:text-sm">
+          <li><a class="px-1 text-gray-600 hover:underline" href="./index.html">Inicio</a></li>
+          <li><a class="px-1 text-blue-600" aria-current="page" href="./cancion.html">Canciones</a></li>
+          <li><a class="px-1 text-gray-600 hover:underline" href="./acerca.html">Acerca</a></li>
+          <li><a class="px-1 text-gray-600 hover:underline" href="./contacto.html">Comunidad</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
+  <!-- Añadir estados de error -->
+  <div id="error-message" class="hidden p-4 mb-4 text-red-700 bg-red-100 border border-red-300 rounded-lg">
+    <p>Error al cargar las canciones. Por favor, recarga la página.</p>
+  </div>
+
   <main class="max-w-4xl p-6 mx-auto">
     <section id="filters" class="mb-6">
       <h2 class="mb-2 text-lg font-semibold">Filtrar canciones</h2>
       <div class="grid grid-cols-1 gap-3 sm:grid-cols-3">
-        <select id="filter-author"
+        <select id="filter-author" aria-label="Filtrar por autor"
           class="px-4 py-2 pr-10 text-sm text-gray-700 bg-gray-100 border-0 rounded hover:bg-gray-200 focus:bg-white focus:outline-none focus:ring-2 focus:ring-blue-500">
           <option value="">Todos los autores</option>
         </select>
-        <select id="filter-genre"
+        <select id="filter-genre" aria-label="Filtrar por género"
           class="px-4 py-2 pr-10 text-sm text-gray-700 bg-gray-100 border-0 rounded hover:bg-gray-200 focus:bg-white focus:outline-none focus:ring-2 focus:ring-blue-500">
           <option value="">Todos los géneros</option>
         </select>
-        <button id="clear-filters" class="px-4 py-2 text-sm text-white bg-blue-600 rounded hover:bg-blue-700">
+        <button id="clear-filters"
+          class="px-4 py-2 text-sm text-white bg-blue-600 rounded hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2">
           Limpiar filtros
         </button>
       </div>
@@ -53,19 +92,27 @@
     <!-- Visor único de canción -->
     <section id="viewer" class="mt-6">
       <div class="max-w-3xl p-6 mx-auto bg-white rounded-lg shadow">
+        <!-- Reemplazar "Cargando..." por skeleton -->
         <header class="flex items-start gap-4">
           <div class="flex-1">
-            <h2 id="post-title" class="text-2xl font-bold">Cargando...</h2>
-            <p id="post-meta" class="mt-1 text-sm text-gray-500"></p>
+            <div id="post-title" class="text-2xl font-bold">
+              <div class="w-3/4 h-8 mb-2 bg-gray-300 rounded animate-pulse"></div>
+            </div>
+            <div id="post-meta" class="mt-1 text-sm text-gray-500">
+              <div class="w-1/2 h-4 bg-gray-200 rounded animate-pulse"></div>
+            </div>
           </div>
         </header>
 
         <div class="mt-4">
           <!-- Mini-nav interno: pestañas -->
+          <!-- Mejorar las pestañas -->
           <nav class="flex gap-2" aria-label="Secciones de la canción">
-            <button class="px-3 py-1 text-gray-700 bg-gray-100 rounded tab-btn" data-tab="author">Autor</button>
-            <button class="px-3 py-1 text-gray-700 bg-gray-100 rounded tab-btn" data-tab="reflection">Reflexión</button>
-            <button class="px-3 py-1 text-gray-700 bg-gray-100 rounded tab-btn" data-tab="listen">Escuchar</button>
+            <button class="px-3 py-1 text-white bg-blue-600 rounded tab-btn active" data-tab="author">Autor</button>
+            <button class="px-3 py-1 text-gray-700 bg-gray-100 rounded tab-btn hover:bg-gray-200"
+              data-tab="reflection">Reflexión</button>
+            <button class="px-3 py-1 text-gray-700 bg-gray-100 rounded tab-btn hover:bg-gray-200"
+              data-tab="listen">Escuchar</button>
           </nav>
 
           <!-- Contenedores por tab -->
@@ -78,11 +125,15 @@
 
         <!-- Navegación simple: flechas Prev / Next -->
         <div class="flex items-center justify-between mt-6">
-          <button id="prev-btn" class="px-4 py-2 text-gray-700 bg-gray-100 rounded hover:bg-gray-200">←
-            Anterior</button>
+          <button id="prev-btn"
+            class="px-4 py-2 text-gray-700 bg-gray-100 rounded hover:bg-gray-200 disabled:opacity-50 disabled:cursor-not-allowed">
+            ← Anterior
+          </button>
           <div class="text-sm text-gray-500" id="post-counter"></div>
-          <button id="next-btn" class="px-4 py-2 text-gray-700 bg-gray-100 rounded hover:bg-gray-200">Siguiente
-            →</button>
+          <button id="next-btn"
+            class="px-4 py-2 text-gray-700 bg-gray-100 rounded hover:bg-gray-200 disabled:opacity-50 disabled:cursor-not-allowed">
+            Siguiente →
+          </button>
         </div>
       </div>
     </section>
