--- a/contacto.html
+++ b/contacto.html
@@ -16,22 +16,54 @@
 
 <body class="text-gray-800 bg-music-gradient">
     <!-- Header: logo y navegación principal -->
-    <header class="shadow-sm header-surface">
-        <div class="flex items-center justify-between max-w-4xl p-4 mx-auto panel-surface">
+    <header class="relative overflow-hidden shadow-sm header-surface">
+        <!-- Barras laterales izquierda - EXTRA GRANDES -->
+        <div class="absolute top-0 left-0 flex flex-col justify-center w-20 h-full gap-1 opacity-35" aria-hidden="true">
+            <div class="w-full bg-blue-500 rounded-r-lg animate-pulse" style="height: 25%; animation-duration: 0.8s;">
+            </div>
+            <div class="w-full bg-purple-500 rounded-r-lg animate-pulse"
+                style="height: 40%; animation-duration: 1.2s; animation-delay: 0.2s;"></div>
+            <div class="w-full bg-pink-500 rounded-r-lg animate-pulse"
+                style="height: 60%; animation-duration: 0.9s; animation-delay: 0.4s;"></div>
+            <div class="w-full bg-blue-400 rounded-r-lg animate-pulse"
+                style="height: 35%; animation-duration: 1.1s; animation-delay: 0.6s;"></div>
+            <div class="w-full bg-purple-400 rounded-r-lg animate-pulse"
+                style="height: 30%; animation-duration: 1.0s; animation-delay: 0.8s;"></div>
+            <div class="w-full bg-pink-400 rounded-r-lg animate-pulse"
+                style="height: 50%; animation-duration: 0.7s; animation-delay: 1s;"></div>
+        </div>
+
+        <!-- Barras laterales derecha - EXTRA GRANDES -->
+        <div class="absolute top-0 right-0 flex flex-col justify-center w-20 h-full gap-1 opacity-35"
+            aria-hidden="true">
+            <div class="w-full bg-pink-500 rounded-l-lg animate-pulse" style="height: 55%; animation-duration: 1.0s;">
+            </div>
+            <div class="w-full bg-blue-500 rounded-l-lg animate-pulse"
+                style="height: 30%; animation-duration: 0.7s; animation-delay: 0.3s;"></div>
+            <div class="w-full bg-purple-500 rounded-l-lg animate-pulse"
+                style="height: 65%; animation-duration: 1.3s; animation-delay: 0.5s;"></div>
+            <div class="w-full bg-pink-400 rounded-l-lg animate-pulse"
+                style="height: 25%; animation-duration: 0.9s; animation-delay: 0.7s;"></div>
+            <div class="w-full bg-blue-400 rounded-l-lg animate-pulse"
+                style="height: 45%; animation-duration: 1.1s; animation-delay: 0.9s;"></div>
+            <div class="w-full bg-purple-400 rounded-l-lg animate-pulse"
+                style="height: 40%; animation-duration: 0.8s; animation-delay: 1.1s;"></div>
+        </div>
+
+        <div class="relative z-10 flex items-center justify-between max-w-4xl p-4 mx-auto panel-surface">
             <!-- Logo / nombre del blog -->
-            <div class="flex items-center gap-3">
-                <!-- Imagen de ejemplo en src/img -->
-                <img src="./src/img/logo.svg" alt="Logo" class="w-10 h-10" />
-                <h1 class="text-xl">MUSITC</h1>
+            <div class="flex items-center flex-shrink-0 gap-3">
+                <div class="w-2 h-8 rounded-full sm:h-10 bg-gradient-to-b from-blue-500 to-purple-600"></div>
+                <h1 class="text-xl font-bold text-gray-800 sm:text-2xl">MUSITC</h1>
             </div>
 
             <!-- Navegación simple -->
-            <nav>
-                <ul class="flex gap-4 text-sm">
-                    <li><a class="text-gray-600 hover:underline" href="./index.html">Inicio</a></li>
-                    <li><a class="text-gray-600 hover:underline" href="./cancion.html">Canciones</a></li>
-                    <li><a class="text-gray-600 hover:underline" href="./acerca.html">Acerca</a></li>
-                    <li><a class="text-blue-600" aria-current="page" href="./contacto.html">Comunidad</a></li>
+            <nav class="flex-shrink-0">
+                <ul class="flex gap-2 text-xs sm:gap-4 sm:text-sm">
+                    <li><a class="px-1 text-gray-600 hover:underline" href="./index.html">Inicio</a></li>
+                    <li><a class="px-1 text-gray-600 hover:underline" href="./cancion.html">Canciones</a></li>
+                    <li><a class="px-1 text-gray-600 hover:underline" href="./acerca.html">Acerca</a></li>
+                    <li><a class="px-1 text-blue-600" aria-current="page" href="./contacto.html">Comunidad</a></li>
                 </ul>
             </nav>
         </div>
@@ -54,21 +86,16 @@
 
         <!-- Estadísticas de la comunidad -->
         <section class="mb-8">
-            <div class="grid grid-cols-3 gap-4">
+            <div class="grid max-w-lg grid-cols-1 gap-4 mx-auto sm:grid-cols-2">
                 <div
                     class="p-4 text-center transition-all bg-white border-2 border-blue-100 shadow-md rounded-xl hover:border-blue-300">
                     <h3 class="mb-1 text-2xl font-bold text-blue-600">47</h3>
-                    <p class="text-sm text-gray-600">Reflexiones</p>
+                    <p class="text-sm text-gray-600">Reflexiones compartidas</p>
                 </div>
                 <div
                     class="p-4 text-center transition-all bg-white border-2 border-green-100 shadow-md rounded-xl hover:border-green-300">
                     <h3 class="mb-1 text-2xl font-bold text-green-600">23</h3>
-                    <p class="text-sm text-gray-600">Sugerencias</p>
-                </div>
-                <div
-                    class="p-4 text-center transition-all bg-white border-2 border-purple-100 shadow-md rounded-xl hover:border-purple-300">
-                    <h3 class="mb-1 text-2xl font-bold text-purple-600">156</h3>
-                    <p class="text-sm text-gray-600">Miembros</p>
+                    <p class="text-sm text-gray-600">Sugerencias recibidas</p>
                 </div>
             </div>
         </section>
@@ -210,7 +237,7 @@
                 <section class="p-6 bg-white border-2 border-yellow-100 shadow-md rounded-xl">
                     <h4 class="flex items-center mb-4 text-lg font-semibold text-gray-800">
                         <span class="mr-2 text-yellow-500">💡</span>
-                        Tips para participar
+                        Tips para una buena reflexión
                     </h4>
                     <div class="space-y-3 text-sm text-gray-600">
                         <div class="flex items-start gap-2">
@@ -242,27 +269,6 @@
                             class="px-3 py-1 text-sm text-yellow-700 bg-yellow-100 border border-yellow-200 rounded-full">Folk</span>
                     </div>
                 </section>
-
-                <!-- Últimas actividades móvil -->
-                <section class="p-6 bg-white border-2 border-gray-100 shadow-md lg:hidden rounded-xl">
-                    <h4 class="mb-4 text-lg font-semibold text-gray-800">📈 Actividad Reciente</h4>
-                    <div class="space-y-3">
-                        <div class="flex items-center gap-3 p-3 border border-blue-100 rounded-lg bg-blue-50">
-                            <span class="flex-shrink-0 w-2 h-2 bg-blue-500 rounded-full"></span>
-                            <div class="text-sm">
-                                <p><strong>María</strong> compartió una reflexión</p>
-                                <p class="text-xs text-gray-500">Hace 2h</p>
-                            </div>
-                        </div>
-                        <div class="flex items-center gap-3 p-3 border border-green-100 rounded-lg bg-green-50">
-                            <span class="flex-shrink-0 w-2 h-2 bg-green-500 rounded-full"></span>
-                            <div class="text-sm">
-                                <p><strong>Carlos</strong> sugirió una canción</p>
-                                <p class="text-xs text-gray-500">Hace 5h</p>
-                            </div>
-                        </div>
-                    </div>
-                </section>
             </div>
         </div>
 
@@ -278,46 +284,14 @@
             </div>
         </div>
 
-        <!-- Últimas actividades - Desktop -->
-        <section class="hidden mt-8 bg-white border-2 border-gray-100 shadow-lg lg:block rounded-xl">
-            <div class="p-6 border-b border-gray-100">
-                <h3 class="flex items-center text-2xl font-semibold">
-                    <span class="mr-3 text-purple-500">📈</span>
-                    Última Actividad de la Comunidad
-                </h3>
-            </div>
-
-            <div class="p-6">
-                <div class="grid grid-cols-1 gap-4 md:grid-cols-3">
-                    <div class="flex items-center gap-4 p-4 border-2 border-blue-100 bg-blue-50 rounded-xl">
-                        <span class="flex-shrink-0 w-4 h-4 bg-blue-500 rounded-full"></span>
-                        <div class="flex-1">
-                            <p class="text-sm font-medium text-gray-800"><strong>María G.</strong> compartió una
-                                reflexión sobre</p>
-                            <p class="text-sm italic text-blue-600">"The Sound of Silence"</p>
-                            <p class="text-xs text-gray-500">Hace 2 horas</p>
-                        </div>
-                    </div>
-
-                    <div class="flex items-center gap-4 p-4 border-2 border-green-100 bg-green-50 rounded-xl">
-                        <span class="flex-shrink-0 w-4 h-4 bg-green-500 rounded-full"></span>
-                        <div class="flex-1">
-                            <p class="text-sm font-medium text-gray-800"><strong>Carlos R.</strong> sugirió analizar</p>
-                            <p class="text-sm italic text-green-600">"Hallelujah - Leonard Cohen"</p>
-                            <p class="text-xs text-gray-500">Hace 5 horas</p>
-                        </div>
-                    </div>
-
-                    <div class="flex items-center gap-4 p-4 border-2 border-purple-100 bg-purple-50 rounded-xl">
-                        <span class="flex-shrink-0 w-4 h-4 bg-purple-500 rounded-full"></span>
-                        <div class="flex-1">
-                            <p class="text-sm font-medium text-gray-800">Nueva reflexión publicada:</p>
-                            <p class="text-sm italic text-purple-600">"Hotel California - Eagles"</p>
-                            <p class="text-xs text-gray-500">Hace 1 día</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <!-- Mensaje de bienvenida final -->
+        <section
+            class="p-6 mt-8 text-center border-l-4 border-blue-500 bg-gradient-to-r from-blue-50 to-purple-50 rounded-xl">
+            <h3 class="mb-2 text-xl font-semibold text-gray-800">¡Gracias por ser parte de nuestra comunidad!</h3>
+            <p class="text-gray-600">
+                Cada reflexión y sugerencia nos ayuda a crear contenido más significativo y conectar con la música de
+                una manera más profunda.
+            </p>
         </section>
 
         <!-- Volver al inicio -->
