--- a/index.html
+++ b/index.html
@@ -10,48 +10,78 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- Añadir display=swap para mejor loading -->
   <link href="https://fonts.googleapis.com/css2?family=Rakkas&family=Open+Sans:wght@300;400;500;600;700&display=swap"
     rel="stylesheet">
 </head>
 
 <body class="text-gray-800 bg-music-gradient">
   <!-- Header: logo y navegación principal -->
-  <header class="shadow-sm header-surface">
-    <div class="flex items-center justify-between max-w-4xl p-4 mx-auto panel-surface">
+  <header class="relative overflow-hidden shadow-sm header-surface">
+    <!-- Barras laterales izquierda - EXTRA GRANDES -->
+    <div class="absolute top-0 left-0 flex flex-col justify-center w-20 h-full gap-1 opacity-35" aria-hidden="true">
+      <div class="w-full bg-blue-500 rounded-r-lg animate-pulse" style="height: 25%; animation-duration: 0.8s;"></div>
+      <div class="w-full bg-purple-500 rounded-r-lg animate-pulse"
+        style="height: 40%; animation-duration: 1.2s; animation-delay: 0.2s;"></div>
+      <div class="w-full bg-pink-500 rounded-r-lg animate-pulse"
+        style="height: 60%; animation-duration: 0.9s; animation-delay: 0.4s;"></div>
+      <div class="w-full bg-blue-400 rounded-r-lg animate-pulse"
+        style="height: 35%; animation-duration: 1.1s; animation-delay: 0.6s;"></div>
+      <div class="w-full bg-purple-400 rounded-r-lg animate-pulse"
+        style="height: 30%; animation-duration: 1.0s; animation-delay: 0.8s;"></div>
+      <div class="w-full bg-pink-400 rounded-r-lg animate-pulse"
+        style="height: 50%; animation-duration: 0.7s; animation-delay: 1s;"></div>
+    </div>
+
+    <!-- Barras laterales derecha - EXTRA GRANDES -->
+    <div class="absolute top-0 right-0 flex flex-col justify-center w-20 h-full gap-1 opacity-35" aria-hidden="true">
+      <div class="w-full bg-pink-500 rounded-l-lg animate-pulse" style="height: 55%; animation-duration: 1.0s;"></div>
+      <div class="w-full bg-blue-500 rounded-l-lg animate-pulse"
+        style="height: 30%; animation-duration: 0.7s; animation-delay: 0.3s;"></div>
+      <div class="w-full bg-purple-500 rounded-l-lg animate-pulse"
+        style="height: 65%; animation-duration: 1.3s; animation-delay: 0.5s;"></div>
+      <div class="w-full bg-pink-400 rounded-l-lg animate-pulse"
+        style="height: 25%; animation-duration: 0.9s; animation-delay: 0.7s;"></div>
+      <div class="w-full bg-blue-400 rounded-l-lg animate-pulse"
+        style="height: 45%; animation-duration: 1.1s; animation-delay: 0.9s;"></div>
+      <div class="w-full bg-purple-400 rounded-l-lg animate-pulse"
+        style="height: 40%; animation-duration: 0.8s; animation-delay: 1.1s;"></div>
+    </div>
+
+    <div class="relative z-10 flex items-center justify-between max-w-4xl p-4 mx-auto panel-surface">
       <!-- Logo / nombre del blog -->
-      <div class="flex items-center gap-3">
-        <!-- Imagen de ejemplo en src/img -->
-        <img src="./src/img/logo.svg" alt="Logo" class="w-10 h-10" />
-        <h1 class="text-xl">MUSITC</h1>
+      <div class="flex items-center flex-shrink-0 gap-3">
+        <div class="w-2 h-8 rounded-full sm:h-10 bg-gradient-to-b from-blue-500 to-purple-600"></div>
+        <h1 class="text-xl font-bold text-gray-800 sm:text-2xl">MUSITC</h1>
       </div>
 
       <!-- Navegación simple -->
-      <nav>
-        <ul class="flex gap-4 text-sm">
-          <li><a class="text-blue-600" aria-current="page" href="./index.html">Inicio</a></li>
-          <li><a class="text-gray-600 hover:underline" href="./cancion.html">Canciones</a></li>
-          <li><a class="text-gray-600 hover:underline" href="./acerca.html">Acerca</a></li>
-          <li><a class="text-gray-600 hover:underline" href="./contacto.html">Comunidad</a></li>
+      <nav class="flex-shrink-0">
+        <ul class="flex gap-2 text-xs sm:gap-4 sm:text-sm">
+          <li><a class="px-1 text-blue-600" aria-current="page" href="./index.html">Inicio</a></li>
+          <li><a class="px-1 text-gray-600 hover:underline" href="./cancion.html">Canciones</a></li>
+          <li><a class="px-1 text-gray-600 hover:underline" href="./acerca.html">Acerca</a></li>
+          <li><a class="px-1 text-gray-600 hover:underline" href="./contacto.html">Comunidad</a></li>
         </ul>
       </nav>
     </div>
   </header>
-
   <!-- Contenedor principal -->
   <main class="max-w-4xl p-6 mx-auto">
     <!-- Introducción breve -->
     <section class="mb-6">
-      <h2 class="text-2xl font-bold">Reflexiones sobre letras</h2>
-      <p class="mt-2 text-gray-600">Un espacio para compartir letras de canciones y pensamientos sobre ellas.</p>
+      <h1 class="text-2xl">Reflexiones sobre letras</h1>
+      <p class="mt-2 text-gray-600">Un espacio para encontrar el significado en tu cancion favorita.</p>
     </section>
-
-
 
     <!-- Grid de posts: se renderizará dinámicamente desde data/post.json -->
     <section aria-label="Listado de entradas" id="posts" class="grid grid-cols-1 gap-6 sm:grid-cols-2">
-      <!-- Mensaje de carga y fallback si JS está deshabilitado -->
-      <p id="posts-fallback" class="text-gray-500">Cargando entradas... (si no ves contenido, activa JavaScript o revisa
-        la consola)</p>
+      <div id="posts-fallback" class="flex items-center justify-center p-8 text-gray-500 col-span-full">
+        <div class="text-center">
+          <div class="w-8 h-8 mx-auto mb-4 border-b-2 border-blue-500 rounded-full animate-spin"></div>
+          <p>Cargando reflexiones musicales...</p>
+        </div>
+      </div>
     </section>
     <!-- Explorar por género -->
     <section id="genres" class="mt-12 mb-12 text-center">
@@ -65,7 +95,7 @@
       </div>
     </section>
 
-    
+
 
   </main>
 
